--- a/style.scss
+++ b/style.scss
@@ -62,15 +62,22 @@
     line-height: 22px;
     /* identical to box height */
     
-    color: #FFFFFF;    
+    color: #FFFFFF;
+
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .games-box {
     height: 556px;
     display: flex;
-    background: #000915;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    align-content: center;
+    gap: 32px;
+    background: #000915;
+    // flex-wrap: wrap;
 
     &__game {
         width: 379px;
@@ -79,8 +86,10 @@
         border-radius: 16px;
         position: relative;
         transition: all 0.5s;
+        // box-sizing: border-box;
+        border: 3px solid #000915;
 
-        &__name {
+        &-name {
             position: absolute;
             left: 32px;
             bottom: 32px;
@@ -96,9 +105,14 @@
         }
 
         &:hover {
-            transform: scale(1.03);
+            // transform: scale(1.03);
+            // box-sizing: border-box;
+            border: 3px solid #44D2FF;
+            cursor: pointer;
+            
         }
     }
     
 }
 
+@import 'mobile.scss';
