--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@
 .top {
   padding-top: 216px;
   height: 1024px;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(-7.35%, rgba(0, 0, 0, 0)), to(#000915)), url(0001.jpg);
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0) -7.35%, #000915 100%), url(0001.jpg);
-  background-image: url("./img/Rectangle 1.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(-7.35%, rgba(0, 0, 0, 0)), to(#000915));
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) -7.35%, #000915 100%);
+  background-image: url("./img/top_bcg.jpg");
   background-repeat: no-repeat;
   background-position: center bottom;
   background-size: cover;
@@ -91,8 +91,8 @@
 .games-box__game {
   width: 379px;
   height: 300px;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(39, 1, 15, 0)), to(#001944)), url(0023.jpg);
-  background: linear-gradient(180deg, rgba(39, 1, 15, 0) 0%, #001944 100%), url(0023.jpg);
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(39, 1, 15, 0)), to(#001944));
+  background: linear-gradient(180deg, rgba(39, 1, 15, 0) 0%, #001944 100%);
   border-radius: 16px;
   position: relative;
   -webkit-transition: all 0.5s;
@@ -166,15 +166,9 @@
     text-align: center;
   }
   .sub-heading {
-    font-family: Montserrat;
     width: 343px;
     height: 66px;
     margin-bottom: 32px;
-    text-align: center;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 22px;
-    /* or 157% */
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -182,6 +176,10 @@
         -ms-flex-align: center;
             align-items: center;
     text-align: center;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    /* or 157% */
   }
   .games-box {
     height: 1220px;
