--- a/_mobile.scss
+++ b/_mobile.scss
@@ -66,7 +66,35 @@
     }
   }
 
+  .game-1 {
+    height: 654px;
+    flex-direction: column;
+    justify-content: center;
+    gap: 64px;
+
+    &-box {
+        width: 344px;
+        align-items: center;
+        text-align: center;
+      }
+    
+    &__heading {
+      font-size: 32px;
+      line-height: 39px;
+    }
+
+    &__sub-heading {
+      font-size: 14px;
+      line-height: 22px;
+    }
+    
+    &__pict {
+      width: 344px; 
+    }
+  }
+
 }
+
 
 // to beautify the look
 @media (max-width: 375px) {
