--- a/style.css
+++ b/style.css
@@ -198,7 +198,37 @@
   width: 485px;
 }
 
-@media (max-width: 1240px) {
+@media (max-width: 1200px) {
+  .center {
+    padding-left: calc(50% - 384px);
+    padding-right: calc(50% - 384px);
+  }
+  .games-box {
+    height: 800px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .games-box__game {
+    width: 343px;
+  }
+  .games-box__game-name {
+    left: 14px;
+  }
+  .game-1 {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 64px;
+  }
+  .game-1-box {
+    width: 400px;
+  }
+  .game-1__pict {
+    width: 400px;
+  }
+}
+
+@media (max-width: 767px) {
   body {
     min-width: 375px;
   }
@@ -207,7 +237,6 @@
     padding-right: calc(50% - 188px);
   }
   .top {
-    width: 375px;
     height: 496px;
     background-image: none;
     background: #000915;
