--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,5 @@
+@import 'const';
+
 * {
     margin: 0;
     padding: 0;
@@ -5,8 +7,8 @@
 }
 
 .center {
-    padding-left: calc(50% - 600px);
-    padding-right: calc(50% - 600px);
+    padding-left: calc(50% - #{$widthDesktop/2});
+    padding-right: calc(50% - #{$widthDesktop/2});
   }
   
 .top {
@@ -185,4 +187,5 @@
     }
 }
 
-@import 'mobile.scss';
+@import 'tablet';
+@import 'mobile';
