--- a/style.scss
+++ b/style.scss
@@ -118,7 +118,8 @@
 }
 
 
-.game-1 {
+.game-1,
+.game-2 {
     // padding-top: 216px;
     height: 800px;
     // background: linear-gradient(180deg, rgba(0, 0, 0, 0) -7.35%, #000915 100%);
