--- a/_tablet.scss
+++ b/_tablet.scss
@@ -61,7 +61,8 @@
         }
       }
     
-      .game-1 {
+      .game-1,
+      .game-2 {
         // height: 654px;
         // flex-direction: column;
         justify-content: center;
