--- a/_mobile.scss
+++ b/_mobile.scss
@@ -91,9 +91,9 @@
     }
   }
   
-  .game-2 {
-    flex-direction: column-reverse;
-  }
+  // .game-2 {
+  //   flex-direction: column-reverse;
+  // }
 }
 
 
